# Coach_AI

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: mcp.json
.claude/agents/: docs-diagram-updater.md
.claude/commands/: update-diagrams.md
.github/workflows/: azure-deploy.yml.disabled
backend/: .env.example  Dockerfile  requirements.txt  test_voice.py
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  assessments.py  clark.py  guidelines.py  scenarios.py  sessions.py  users.py  voice.py
backend/app/core/: __init__.py  azure_services.py  config.py  database.py  security.py
backend/app/models/: __init__.py  assessment.py  scenario.py  session.py  student.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/templates/: landing.html
database/: seed_scenarios.sql
database/migrations/: 001_initial_schema.sql  002_users_table_migration.sql
docs/: README.md
docs/api/: API_REFERENCE.md
docs/deployment/: DEPLOYMENT.md
docs/design/: DESIGN_COMPARISON.md  LANDING_PAGE_README.md
docs/development/: ARCHITECTURE.md  DEVELOPMENT.md
docs/diagrams/: README.md  architecture.md  assessment-flow.md  data-flow.md  scenario-engine.md
docs/setup/: QUICKSTART.md  TEMPLATE_SETUP.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: landing.html
frontend/src/: App.tsx  vite-env.d.ts
scripts/: validate_diagrams.py
(+43 files in other folders)
